# aku

./: TODO
app/: akuadddir.cpp  akuextractiondialog.h  akuiconview.h  akuiconwidget.h  akutooltip.h  akutooltipmanager.h  akutreenode.cpp  akutreeview.h  akuui.rc  akuviewoptionwidget.cpp  akuviewoptionwidget.h  akuviewoptionwidget.ui  extractiondialog.ui  mainwindow.cpp  mainwindow.h  pluginview.h
base/: CMakeLists.txt  aku_macros.h  akuplugin.h  pluginloader.cpp  pluginloader.h
experimental/: CMakeLists.txt
experimental/app/: CMakeLists.txt  akuadddir.h  akuextractiondialog.cpp  akuextractiondialog.h  akuiconview.cpp  akuiconview.h  akuiconwidget.cpp  akuiconwidget.h  akutooltip.cpp  akutooltip.h  akutooltipmanager.cpp  akutooltipmanager.h  akutreeitem.cpp  akutreeitem.h  akutreemodel.cpp  akutreemodel.h  akutreenode.cpp  akutreenode.h  akutreeview.cpp  akutreeview.h  akuui.rc  akuviewoptionwidget.cpp  akuviewoptionwidget.h  akuviewoptionwidget.ui  extractiondialog.ui  main.cpp  maintree.cpp  maintree.h  mainwindow.cpp  mainwindow.h  openarchive.cpp  openarchive.h  plugininfodelegate.cpp  plugininfodelegate.h  pluginview.cpp  pluginview.h
experimental/base/: CMakeLists.txt  aku_macros.h  aku_plugin.desktop  akujobs.cpp  akujobs.h  akuplugin.cpp  akuplugin.h  pluginloader.cpp  pluginloader.h
experimental/plugins/: CMakeLists.txt  aku_rarplugin.desktop~  rarplugin.cpp  rarplugin.h
experimental/plugins/aceplugin/: aceplugin.cpp  aceplugin.h  aku_aceplugin.desktop
experimental/plugins/gzipplugin/: gzipplugin.cpp  gzipplugin.h
experimental/plugins/karchiveutils/: karchiveutils.cpp  karchiveutils.h
experimental/plugins/rarplugin/: rarplugin.cpp  rarplugin.h
experimental/plugins/szipplugin/: CMakeLists.txt  szipplugin.cpp  szipplugin.h
experimental/plugins/tarplugin/: CMakeLists.txt  tarplugin.cpp  tarplugin.h
experimental/plugins/zipplugin/: CMakeLists.txt  zipconfig.ui  zipplugin.cpp  zipplugin.h
ng/: CMakeLists.txt
ng/app/: CMakeLists.txt  CMakeLists.txt~  addfiledialog.cpp  addfiledialog.h  akustatusbar.cpp  akustatusbar.h  akutreemodel.cpp  akutreemodel.h  akutreenode.cpp  akutreenode.h  akutreeview.cpp  akutreeview.h  akuui.rc  commentwidget.cpp  commentwidget.h  errorwidget.cpp  errorwidget.h  extractiondialog.cpp  extractiondialog.h  extractiondialog.ui  filterwidget.cpp  filterwidget.h  infodialog.cpp  infodialog.h  main.cpp  mainwindow.cpp  mainwindow.h  metawidget.cpp  metawidget.h  overwritewidget.cpp  overwritewidget.h  passwidget.cpp  passwidget.h  pluginsmodel.cpp  pluginsmodel.h  previewwidget.cpp  previewwidget.h  sortfiltermodel.cpp  sortfiltermodel.h  statusbar.cpp  (+1 more)
ng/base/: akujobs.cpp  akujobs.h  akuplugin.cpp  akuplugin.h  pluginloader.cpp  pluginloader.h
ng/plugins/: CMakeLists.txt
ng/plugins/7zipplugin/: 7zipplugin.h  CMakeLists.txt  aku_7zipplugin.desktop  aku_szipplugin.desktop  szipplugin.cpp  szipplugin.h
ng/plugins/aceplugin/: CMakeLists.txt  aceplugin.cpp  aceplugin.h  aku_aceplugin.desktop
ng/plugins/gzipplugin/: aku_gzipplugin.desktop  gzipplugin.cpp  gzipplugin.h
ng/plugins/karchiveutils/: karchiveutils.cpp  karchiveutils.h
ng/plugins/rarplugin/: aku_rarplugin.desktop  rarplugin.cpp  rarplugin.h
ng/plugins/tarplugin/: CMakeLists.txt  aku_tarplugin.desktop  tarplugin.cpp  tarplugin.h
ng/plugins/zipplugin/: CMakeLists.txt  aku_zipplugin.desktop  zipplugin.cpp  zipplugin.h
ng/script/: CMakeLists.txt  akuscriptwidget.cpp  akuscriptwidget.h  main.cpp  scriptobject.cpp  scriptobject.h
plugins/aceplugin/: aceplugin.cpp
plugins/gzipplugin/: CMakeLists.txt  aku_gzipplugin.desktop
plugins/karchiveutils/: karchiveutils.h
plugins/rarplugin/: CMakeLists.txt  aku_rarplugin.desktop
plugins/tarplugin/: aku_tarplugin.desktop
plugins/zipplugin/: aku_zipplugin.desktop
src/: akumaintable.h  extractdialog.cpp  rarprocess.cpp
trunk/: CMakeLists.txt
trunk/src/: akumaintable.cpp  main.cpp  mainwindow.cpp  zipprocess.cpp
